<resources>
    <string name="app_name">ChallangeAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="txt_type">Type</string>
    <string name="txt_id">Id:</string>
    <string name="txt_ancActivated">Anc activated:</string>
    <string name="txt_frequency">Frequency:</string>
    <string name="txt_channel">Channel:</string>
    <string name="txt_hearing_threshold_difference">Hearing threshold difference:</string>
    <string name="txt_avg_sound_pressure_level_difference">AVG sound pressure level difference:</string>
    <string name="txt_instant_sound_pressure_level_difference">Instant sound pressure level difference:</string>
    <string name="txt_avg_distance_difference">AVG distance difference:</string>
    <string name="txt_freq_instant_intensity_difference">Freq instant intensity difference:</string>
    <string name="txt_freq_avg_intensity_difference">Freq AVG intensity difference:</string>
    <string name="txt_last_update">Last update:</string>
    <string name="txt_timestamp">Timestamp:</string>
    <string name="txt_patient">Patient:</string>

    <string name="txt_Boolean">Boolean</string>
    <string name="txt_Int">Int</string>
    <string name="txt_String">String</string>

</resources>